# pico

./: readme
current_source/: CMakeLists.txt  current_source.c
current_source/coll_data/: discharge.gnp  loadtest.pl  rload.gnp  rload.txt
current_source/include/: i2c.h  ssd1306.h
heartrate/: CMakeLists.txt  heartrate.c  max30102.c
heartrate/dsp/: chebbpf.h
heartrate/include/: core_fifo.h  i2c.h  ssd1306.h
microphone/: CMakeLists.txt  microphone.c
microphone-pio-dma/: .microphone.c.swp  i2s.pio  microphone.c  readme
microphone-pio-dma/gnuplot/: data3  gnutest.gnp  read.pl
microphone/gnuplot/: data3  gnutest.gnp  read.pl
microphone/include/: disp_text.c  disp_wave.c
webpage/: CMakeLists.txt  index.html  webpage.c
webpage/include/: tcp_server.h
